opam-version: "2.0"
name: "tjr_pcache"
version: "0.0.1"

# ----------------------------------------------------------------------

authors: "Tom Ridge <tom.j.ridge@googlemail.com>"
maintainer: "Tom Ridge <tom.j.ridge@googlemail.com>"
homepage: "https://github.com/tomjridge/tjr_pcache"
bug-reports: "https://github.com/tomjridge/tjr_pcache/issues"

# ----------------------------------------------------------------------

depends: [
  "yojson"
  "ppx_deriving_yojson"
  "tjr_lib"
  "tjr_fs_shared"
  "tjr_monad"
  "tjr_polymap"
]

# ----------------------------------------------------------------------

build: [
#  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

# install: [make "install"]

# remove: [make "uninstall"]
