opam-version : "2.0"
name         : "tjr_pcache"
version      : "0.0.1"
synopsis     : "Persistent cache (part of ImpFS)"

# ----------------------------------------------------------------------

authors      : "Tom Ridge <tom.j.ridge@googlemail.com>"
maintainer   : "Tom Ridge <tom.j.ridge@googlemail.com>"
homepage     : "https://github.com/tomjridge/tjr_pcache"
bug-reports  : "https://github.com/tomjridge/tjr_pcache/issues"
dev-repo     : "git+https://github.com/tomjridge/tjr_pcache.git"

# ----------------------------------------------------------------------

depends: [
  # for test and examples
  "ppx_deriving_yojson"
  "alcotest" 
  "core" # could be more fine-grained about deps
  
  # for main lib
  "ppx_optcomp"
  "tjr_fs_shared"
]

# ----------------------------------------------------------------------

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
