opam-version : "2.0"
name         : "tjr_pcache_test"
version      : "0.0.1"
synopsis     : "Persistent cache test code (part of ImpFS)"

# ----------------------------------------------------------------------

authors     : "Tom Ridge <tom.j.ridge@googlemail.com>"
maintainer  : "Tom Ridge <tom.j.ridge@googlemail.com>"
homepage    : "https://github.com/tomjridge/tjr_pcache"
bug-reports : "https://github.com/tomjridge/tjr_pcache/issues"
dev-repo    : "git+https://github.com/tomjridge/tjr_pcache.git"

# ----------------------------------------------------------------------

depends: [
  "tjr_pcache"
  "tjr_pcache_example"
  "core"
]

# ----------------------------------------------------------------------

build: [
  ["dune" "build" "-p" name "-j" jobs]
]
